<?xml version="1.0"?>
<package format="2">
	<name>charuco_creator</name>
	<version>1.0.0</version>
	<description>Creator of ChAruCo patterns</description>
	<author email="joao.pedro@engenharia.ufjf.br">João Pedro Carvalho de Souza</author>
	<maintainer email="joao.pedro@engenharia.ufjf.br">João Pedro Carvalho de Souza</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>cv_bridge</depend>
	<depend>eigen</depend>
	<depend>geometry_msgs</depend>
	<depend>image_transport</depend>
	<depend>opencv3</depend>
	<depend>rosconsole</depend>
	<depend>roscpp</depend>
	<depend>rostime</depend>
	<depend>sensor_msgs</depend>
	<depend>tf2</depend>
	<depend>tf2_ros</depend>
</package>
